# password-manager

./: README.md
app_pm/: .gitignore  README.md  package-lock.json  package.json
app_pm/src/: fonts.css  index.html  main.js  styles.css
app_pm/src-tauri/: Cargo.toml  tauri.conf.json
app_pm/src-tauri/capabilities/: default.json
app_pm/src-tauri/icons/: icon.icns
app_pm/src-tauri/src/: commands.rs  lib.rs  main.rs
app_pm/src/css/: dialog-forms.css  dialog-info.css  home.css  manager.css  row.css
app_pm/src/views/components/dialogs/: dialogs.css  dialogs.html  dialogs.js
app_pm/src/views/components/forms/: forms.html  home_forms.js  row_forms.js
app_pm/src/views/components/rows/: row.html  row.js
app_pm/src/views/home_page/: home.html  home.js
app_pm/src/views/manager_page/: manager.html  manager.js
app_pm/src/views/utils/: invokes.js  plugin-clipboard.js  plugin-dialog.js  plugin-os.js  utils.js
core_pm/: Cargo.toml
core_pm/src/: lib.rs  password_manager.rs
core_pm/src/database/: database.rs
core_pm/src/models/: entry.rs  mod.rs  sfield.rs
core_pm/tests/: pm_tests.rs
passwordmm/: Cargo.toml
passwordmm/src/: connection_db.rs  database.rs  entry.rs  lib.rs  password_manager.rs  password_struct.rs  pm_structs.rs  search_field.rs
