[package]
name = "core_pm"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
rpassword = "7.4.0"
directories = "5.0"
zeroize = "1.7"
secrecy = "0.8"
serde = { version = "1.0", features = ["derive"] }
tempfile = "3" #for tests

[dependencies.rusqlite]
version = "0.31.0"
#features = ["sqlcipher", "bundled-sqlcipher"]
#For android dev
features = ["sqlcipher", "bundled-sqlcipher-vendored-openssl"]

[lib]
name = "core_pm"
path = "src/lib.rs"
