[package]
name = "passwordmm"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
rpassword = "7.4.0"
directories = "5.0"
tempfile = "3"

[dependencies.rusqlite]
version = "0.31.0"
features = ["sqlcipher", "bundled-sqlcipher"]

[lib]
name = "passwordmm"
path = "src/lib.rs"

[[bin]]
name = "passwordmm"
path = "src/main.rs"
