[package]
name = "app_pm"
version = "0.1.0"
description = "A Tauri App"
authors = ["Ianluck Rojo"]
edition = "2021"

[lib]
name = "app_pm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
core_pm = { path = "../../core_pm" } #our core implementation import
anyhow = "1.0.100"
rpassword = "7.4.0"
secrecy = "0.8"
thiserror = "1.0"
tauri-plugin-log = "2.8.0"
